--- a/index.html
+++ b/index.html
@@ -13,160 +13,181 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap"
-    />
 
     <style>
       :root {
-        --theme-color: #2563eb; /* Royal Blue */
-        --sidebar-width: 280px;
-        --base-font-size: 16px;
+        --theme-color: #24292f;
+        --sidebar-width: 260px;
+        --mono-font:
+          "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
+          monospace;
+      }
+
+      * {
+        box-sizing: border-box;
       }
 
       body {
-        font-family:
-          "Inter",
-          -apple-system,
-          BlinkMacSystemFont,
-          "Segoe UI",
-          Roboto,
-          sans-serif;
-        font-size: var(--base-font-size);
-        color: #334155; /* Slate 700 */
-        letter-spacing: -0.01em;
+        font-family: var(--mono-font);
+        font-size: 14px;
+        line-height: 1.6;
+        color: #24292f;
         background-color: #ffffff;
       }
 
-      /* Sidebar Styling */
+      /* Sidebar */
       .sidebar {
-        background-color: #f8fafc; /* Slate 50 */
-        border-right: 1px solid #e2e8f0;
+        background-color: #f6f8fa;
+        border-right: 1px solid #d0d7de;
         width: var(--sidebar-width);
       }
 
       .sidebar .app-name {
-        font-weight: 600;
-        font-size: 1.25rem;
-        color: #0f172a; /* Slate 900 */
-        padding: 24px 0 0;
+        display: none;
       }
 
       .sidebar-nav ul {
-        padding-left: 0;
+        padding: 0;
+        margin: 20px 0;
       }
 
       .sidebar-nav li {
+        list-style: none;
+      }
+
+      .sidebar-nav a {
+        display: block;
+        padding: 4px 20px;
+        color: #24292f;
+        text-decoration: none;
+        font-size: 13px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
+      .sidebar-nav a:hover,
+      .sidebar-nav a.active {
+        color: #0969da;
+        background: #f3f4f6;
+      }
+
+      /* Content Area - Raw Markdown Look */
+      .content {
+        padding-top: 0;
         margin: 0;
       }
 
-      .sidebar-nav li > a {
-        font-size: 0.95rem;
-        font-weight: 500;
-        color: #64748b; /* Slate 500 */
-        border-radius: 6px;
-        margin: 4px 12px;
-        padding: 8px 12px;
-        transition: all 0.2s;
-        border: none;
-      }
-
-      .sidebar-nav li > a:hover {
-        background-color: #e2e8f0;
-        color: #0f172a;
-        text-decoration: none;
-      }
-
-      .sidebar-nav li.active > a {
-        background-color: #eff6ff; /* Blue 50 */
-        color: #2563eb; /* Blue 600 */
-        font-weight: 600;
-      }
-
-      /* Main Content */
-      .content {
-        padding-top: 40px;
-        max-width: 900px;
-        margin: 0 auto;
-      }
-
       .markdown-section {
-        padding: 0 40px 60px;
+        max-width: 1000px;
+        padding: 40px;
+        margin: 0 auto;
+        font-family: var(--mono-font) !important;
       }
 
-      /* Typography Polish */
-      .markdown-section h1 {
-        font-weight: 700;
-        font-size: 2.25rem;
-        color: #0f172a;
-        margin-bottom: 32px;
-        letter-spacing: -0.02em;
+      /* Reconstruct Markdown Headings */
+      .markdown-section h1,
+      .markdown-section h2,
+      .markdown-section h3,
+      .markdown-section h4 {
+        font-weight: bold;
+        color: #24292f;
+        margin: 1.5em 0 1em;
+        border: none;
+        padding: 0;
+        font-size: 14px; /* Same size as text, distinct by syntax */
       }
 
-      .markdown-section h2 {
-        font-weight: 600;
-        font-size: 1.75rem;
-        color: #1e293b;
-        margin-top: 48px;
-        border-bottom: 1px solid #f1f5f9;
-        padding-bottom: 12px;
+      .markdown-section h1::before {
+        content: "# ";
+        color: #0969da;
+      }
+      .markdown-section h2::before {
+        content: "## ";
+        color: #0969da;
+      }
+      .markdown-section h3::before {
+        content: "### ";
+        color: #0969da;
+      }
+      .markdown-section h4::before {
+        content: "#### ";
+        color: #0969da;
       }
 
-      .markdown-section h3 {
-        font-weight: 600;
-        font-size: 1.25rem;
-        color: #334155;
-        margin-top: 32px;
+      /* Reconstruct Lists */
+      .markdown-section ul {
+        list-style: none;
+        padding-left: 0;
       }
 
-      .markdown-section p,
-      .markdown-section ul,
-      .markdown-section ol {
-        line-height: 1.8;
+      .markdown-section ul > li {
+        padding-left: 0;
+      }
+
+      .markdown-section ul > li::before {
+        content: "- ";
+        color: #0969da;
+        font-weight: bold;
+      }
+
+      /* Paragraphs & Spacing */
+      .markdown-section p {
+        margin: 1em 0;
+      }
+
+      /* Code Blocks */
+      .markdown-section pre {
+        background-color: #f6f8fa;
+        padding: 16px;
+        border-radius: 6px;
+        margin: 1em 0;
+        border: 1px solid #d0d7de;
       }
 
       .markdown-section code {
-        background-color: #f1f5f9;
-        color: #0f172a;
-        padding: 2px 6px;
-        border-radius: 4px;
-        font-family: "Menlo", "Monaco", "Courier New", monospace;
-        font-size: 0.9em;
-      }
-
-      .markdown-section pre {
-        background-color: #1e293b; /* Dark slate for code blocks for contrast */
-        border-radius: 8px;
-        padding: 24px;
-        line-height: 1.6;
+        font-family: var(--mono-font) !important;
+        background-color: rgba(175, 184, 193, 0.2);
+        padding: 0.2em 0.4em;
+        border-radius: 6px;
+        font-size: 85%;
       }
 
       .markdown-section pre code {
         background-color: transparent;
-        color: #f8fafc;
         padding: 0;
+        border-radius: 0;
+        font-size: 100%;
+        color: #24292f;
       }
 
-      /* Search Box */
+      /* Blockquotes */
+      .markdown-section blockquote {
+        margin: 1em 0;
+        padding: 0;
+        border: none;
+        color: #57606a;
+      }
+
+      .markdown-section blockquote p::before {
+        content: "> ";
+        color: #0969da;
+        font-weight: bold;
+      }
+
+      /* Search */
       .search {
-        border-bottom: 1px solid #e2e8f0;
-        padding: 16px;
-        background-color: #f8fafc;
+        border-bottom: 1px solid #d0d7de;
+        padding: 10px;
       }
-
       .search input {
-        border: 1px solid #cbd5e1;
-        background: #fff;
+        width: 100%;
+        padding: 6px 12px;
+        border: 1px solid #d0d7de;
         border-radius: 6px;
-        padding: 8px 12px;
-        font-size: 0.9rem;
-        transition: border-color 0.2s;
-      }
-
-      .search input:focus {
-        border-color: #2563eb;
-        box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.1);
+        background: #ffffff;
+        font-family: var(--mono-font);
+        font-size: 13px;
       }
     </style>
   </head>
